--- a/src/components/Workpermit/elements.css
+++ b/src/components/Workpermit/elements.css
@@ -4,6 +4,13 @@
     display: flex;
     justify-content: center;
 }
+@media screen and (max-width:480px) {
+    .w-container{
+        max-width: 100%;
+        padding: 10px;
+        margin: 0;
+    }
+}
 .w-wrapper{
     max-width: 1200px;
     padding: 30px;
@@ -13,6 +20,14 @@
     justify-content: center;
     box-shadow: rgba(0, 0, 0, 0.45) 0px 25px 20px -20px;
 }
+@media screen and (max-width:480px) {
+    .w-wrapper{
+        max-width: 100%;
+        padding: 0px;
+        margin: 0;
+    }
+}
+
 .w-img{
     height: auto;
     width: 100%;
