--- a/src/components/navbar/dropdown/Dropdown.css
+++ b/src/components/navbar/dropdown/Dropdown.css
@@ -1,5 +1,5 @@
 .dropdown-menu {
-    background: red;
+    background:#991A1E;
     width: 300px;
     position: absolute;
     top: 128px;
@@ -8,7 +8,7 @@
   }
   
   .dropdown-menu li {
-    background: #f70000;
+    background: #991A1E;
     cursor: pointer;
   }
   
@@ -34,4 +34,4 @@
       display: none;
     }
   }
-  {"mode":"full","isActive":false}
+ 
