--- a/src/components/booking/elements.css
+++ b/src/components/booking/elements.css
@@ -2,26 +2,28 @@
 .body-container{
     margin: 0;
     background-color: #f8f9fb;
-    min-width: 100vw;
+    /* min-width: 100vw; */
     min-height: 100vh;
     display: flex;
     justify-content: center;
+    flex-direction: row;
     align-items: center;
   
 
 }
+
+
 .price-comparison{
-  display: flex;
-  justify-content: center;
-  align-items: stretch;
-  flex-direction: row;
-  width: 100%;
-  margin: 1rem;
+ display: flex;
+ justify-content: center;
+ flex-direction: row;
 }
 
-@media screen and(max-width:768px) {
+@media screen and(min-width:768px) {
     .price-comparison{
-        flex-direction: column ;
+       display: flex;
+       justify-content: center;
+       flex-direction: column !important;
 
     }
     
@@ -107,4 +109,6 @@
     justify-content: center;
     align-items: center;
     padding: 15px;
-    transition: all 0.2s ease-in-out;}
+    transition: all 0.2s ease-in-out;
+
+}
