--- a/src/components/booking/popup.css
+++ b/src/components/booking/popup.css
@@ -8,14 +8,16 @@
     display: flex;
     justify-content: center;
     align-items: center;
+  
 }
 
 .popup-inner{
     position: relative;
-    padding: 32px;
+    padding: 50px;
     width: 100%;
     max-width: 640px;
     background-color: #fff;
+    border-radius: 10px;
 
 }
 
@@ -28,9 +30,16 @@
     outline: none;
     border: none;
     cursor:pointer;
-    display:flex;
-    justify-content: center;
-    align-items: center;
     padding: 15px;
+    align-items: flex-end;
     transition: all 0.2s ease-in-out;
+    float: right;
+    
+}
+.close .fa-times{
+    font-size: 1.5rem;
+}
+.popup-elements{
+    text-align: justify;
+    padding: 20px;
 }
