--- a/src/components/booking/elements.css
+++ b/src/components/booking/elements.css
@@ -1,47 +1,67 @@
 
 .body-container{
-    margin: 0;
+    /* margin: 0; */
     background-color: #f8f9fb;
-    /* min-width: 100vw; */
-    min-height: 100vh;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+    margin-left: auto;
+    margin-right: auto;
+
+}
+@media screen and (max-width:768px) {
+    .body-container{
+        height: auto;
+        flex-direction: column;
+        justify-content: center;
+    }
+}
+.b-h1{
+    color: #991A1E;
+    font-size: 3rem;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+}
+.price-wrapper-book{
+    width: 800px;
     display: flex;
     justify-content: center;
     flex-direction: row;
-    align-items: center;
-  
-
 }
-
-
-.price-comparison{
- display: flex;
- justify-content: center;
- flex-direction: row;
-}
-
-@media screen and(min-width:768px) {
-    .price-comparison{
-       display: flex;
-       justify-content: center;
-       flex-direction: column !important;
-
+@media screen and (max-width:768px) {
+    .price-wrapper-book{
+        flex-direction: column;
+        
+        width: auto;
+        margin-left: auto;
+        margin-right: auto;
     }
-    
 }
+
 .price-column{
     background-color: white;
     box-shadow: 0 7px 30px rgba(52,31,97, 0.1);
     padding: 2rem;
     flex-grow: 1;
     flex-basis: 0;
-    max-width: 275px;
+    max-width: 400px;
     border-radius: 8px;
 
+}
+
+@media screen and (max-width:768px) {
+    .price-column{
+        width: 400px;
+        margin-top: 20px;
+        padding: 3rem;
+        margin-bottom: 20px;
+    }
 }
 .price-column.popular{
     background-color:#991A1E ;
     box-shadow: 0 7px 30px rgba(52,31,97, 0.5);
-    color: white;
+    color: rgb(250, 250, 250);
     margin-top: -1.5rem;
     padding-top: 3.5rem;
     margin-bottom: -1.5rem;
@@ -98,8 +118,9 @@
     background: white;
 }
 .read-button{
-    text-decoration: none;
+ 
     background: #991A1E;
+    width: 100%;
     color: #fff;
     border-radius: 5px;
     outline: none;
@@ -111,4 +132,61 @@
     padding: 15px;
     transition: all 0.2s ease-in-out;
 
+}
+.read-button:hover{
+    background: #042058;
+}
+.price-column.popular .read-button.popular{
+    text-decoration: none;
+    background: #fff;
+    width: 100%;
+    color: #991A1E;
+    border-radius: 5px;
+    outline: none;
+    border: none;
+    cursor:pointer;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    padding: 15px;
+    transition: all 0.2s ease-in-out;
+}
+.text-element{
+    width: auto;
+    margin-top:50px;
+}
+
+.text-elemt{
+    display: flex;
+    width: 100%;
+    flex-direction: column;
+    justify-content: center;
+    margin-top: 50px;
+    padding: 10px;
+    margin-bottom: 50px;
+}
+.feature {
+    display: flex;
+    justify-content: flex-start;
+}
+.feature.popular{
+    display: flex;
+    justify-content: flex-start;
+    background: #991A1E;
+}
+.f-element{
+    background: #991A1E;
+}
+.fa-circle{
+    padding: 8px;
+    color: rgb(9, 180, 9);
+}
+.text-fe{
+    
+    padding: 3px;
+    margin-bottom: 5px;
+    text-align: justify;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 1.2rem;
+    font-weight: bold;
 }
