--- a/src/components/booking/popup.css
+++ b/src/components/booking/popup.css
@@ -1,31 +1,52 @@
 .popup{
     position: fixed;
+    /* width: 100%; */
     top: 0;
     left: 0;
-    width: 100%;
-    height: 100vh;
+    right: 0;
+    bottom: 0;
     background-color: rgba(0,0,0,0 , 0.2);
     display: flex;
     justify-content: center;
     align-items: center;
+    z-index: 999;
+    margin-top: 50px;
+    margin-bottom: 50px;
+    overflow: auto;
+   
   
+}
+@media screen and (max-width:768px) {
+    .popup{
+        flex-direction: row;
+       height:auto;
+       margin: 0;
+      
+    }
 }
 
 .popup-inner{
-    position: relative;
+    position:relative;
     padding: 50px;
     width: 100%;
-    max-width: 640px;
-    background-color: #fff;
+    max-width: 740px;
+    background: #991A1E;
     border-radius: 10px;
 
+}
+@media screen and (max-width:768px) {
+    .popup-inner{
+        
+        width: auto;
+        padding: 10px;
+    }
 }
 
 
  .close{
-    text-decoration: none;
-    background: #991A1E;
-    color: #fff;
+    
+    background: #fff;
+    color: #991A1E;
     border-radius: 5px;
     outline: none;
     border: none;
@@ -33,13 +54,11 @@
     padding: 15px;
     align-items: flex-end;
     transition: all 0.2s ease-in-out;
-    float: right;
     
-}
-.close .fa-times{
-    font-size: 1.5rem;
+    
 }
 .popup-elements{
     text-align: justify;
-    padding: 20px;
+    margin: 00px;
+    color: #fff;
 }
