--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -14,6 +14,11 @@ img.logo{
   max-width: 300px;
 
 } 
+.nav-item a{
+  text-decoration: none;
+  color: #fff;
+}
+
 
   .nav-menu {
     display: grid;
