--- a/src/components/fees/elements.css
+++ b/src/components/fees/elements.css
@@ -13,6 +13,11 @@
     justify-content: center;
     box-shadow: rgba(0, 0, 0, 0.45) 0px 25px 20px -20px;
 }
+@media screen and (max-width:768px) {
+    .fee-wrapper{
+        width: ;
+    }
+}
 .fee-img{
     display: block;
     margin-left: auto;
@@ -40,6 +45,7 @@
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 .fee-h3{
+    text-align: center;
     color: rgb(189, 8, 8);
     margin-top: 20px;
     padding: 5px;
@@ -47,10 +53,11 @@
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 .fee-text{
-    padding: 5px; 
+     
     text-align: justify;
 }
 .fee-h5{
+    font-size: 1.5rem;
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif ;
     text-decoration: underline;
     color:rgb(189, 8, 8);
